--- a/pluged_app/templates/pluged_page.html
+++ b/pluged_app/templates/pluged_page.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<h1>Welcome to PlugED!</h1>
-	<!-- Put links here -->
+	<img src="static/images/pluged_logo.jpg">
 </body>
 </html>
 	
