Draft of new webpage based off template

--- a/pluged_app/templates/pluged_page.html
+++ b/pluged_app/templates/pluged_page.html
@@ -1,46 +1,292 @@
-<!DOCTYPE html>
+
+<!doctype html>
 <html lang="en">
 <head>
-	<title>Welcome to PlugED!</title>
-	<style>
-body {
-	background-image: url("static/images/pluged_logo.jpg");
-}
-.button {
-	    background-color: #4CAF50; /* Green */
-	    border: none;
-	    color: white;
-	    padding: 15px 32px;
-	    text-align: center;
-	    text-decoration: none;
-	    display: inline-block;
-	    font-size: 16px;
-	    margin: 4px 2px;
-	    cursor: pointer;
-}
-.button1 {border-radius: 2px;}
+	<meta charset="utf-8" />
+	<link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
+	<link rel="icon" type="image/png" href="images/logo.png">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-	</style>
+	<title>Plug Education</title>
 
+	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+	<!--     Fonts and icons     -->
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" />
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
+
+	<!-- CSS Files -->
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="assets/css/material-kit.css" rel="stylesheet"/>
+
+	<!-- CSS Just for demo purpose, don't include it in your project -->
+	<link href="assets/css/demo.css" rel="stylesheet" />
+
+	<link href="assets/css/custom.css" rel="stylesheet" />
+
+	<link href="https://fonts.googleapis.com/css?family=Alex+Brush" rel="stylesheet"
 </head>
-<body>
-	<h1 align="center">Welcome to PlugED!</h1>
-	<!-- <img src="static/images/pluged_logo.jpg"> -->
-	<div align="center">
-		<div align="center">
-			<form class="button button1" action="/kanav">
-				<input type="submit" value="Navigate to Kahn Academy Lite!"/>
-			</form>
-		</div>
-		
-		<div align="center">
-			<form class="button button1" action="/static/WebBrowser.apk">
-				<input type="submit" value="Download Web Browser"/>
-			</form>
-		</div>
 
+<body class="index-page">
+<!-- Navbar -->
+<nav class="navbar navbar-transparent navbar-fixed-top navbar-color-on-scroll">
+	<div class="container">
+        <div class="navbar-header">
+	    	<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigation-index">
+	        	<span class="sr-only">Toggle navigation</span>
+	        	<span class="icon-bar"></span>
+	        	<span class="icon-bar"></span>
+	        	<span class="icon-bar"></span>
+	    	</button>
+	    	<a href="#">
+	        	<div class="logo-container">
+	                <div class="logo">
+	                    <img src="images/logo.png" alt="PlugEd" rel="tooltip" title="PlugEd" data-placement="bottom">
+	                </div>
+        
+				</div
+	      	</a>
+	    </div>
+
+	    <div class="collapse navbar-collapse" id="navigation-index">
+	    	<ul class="nav navbar-nav navbar-right">
+
+			<a>
+		   	<a rel="tooltip" title="Meet The Team" data-placement="bottom" href="#team" class"btn btn-white btn-simple btn-just-icon">
+						<i class="fa fa-users"></i>
+			</a>
+				
+			
+			<a>	
+			<a rel= "tooltip" title="Like us on Facebook" data-placement="bottom" href="https://www.facebook.com/PlugEducation" target="_blank" class="btn btn-white btn-simple btn-just-icon">
+						<i class="fa fa-facebook-square"></i>
+				
+			</a>	
+
+	    	</ul>
+	    </div>
 	</div>
-</body>
-</html>
+</nav>
+<!-- End Navbar -->
+
+
+<div class="wrapper">
+
+	<div class="header header-filter" style="background-image: url('assets/img/bg2.jpeg');">
+
+		<div class="container">
+			<div class="row">
+
+				<div class="col-md-12">
+
+					<div id="myCarousel" class="carousel slide">
+					  <!-- Indicators -->
+					  <ol class="carousel-indicators">
+						    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+						    <li data-target="#myCarousel" data-slide-to="1"></li>
+						    <li data-target="#myCarousel" data-slide-to="2"></li>
+					  </ol>
+					  <div class="carousel-inner">
+					    <div class="item active">
+					      <h1>The Problem</h1>
+		<p color=>Resource shortages and inadequate access to online educatonal contentis one of the biggest barriers to education.</p>
+					      <div class="container">
+					        
+					      </div>
+					    </div>
+
+
+
+					    <div class="item">
+					      <h1>PlugEd's</h1>
+					      <h4><strong>Solution</strong></h4>
+					      <p>Our idea is to provide an offline device which broadcasts high bandwidth content such as videos to students without the associated data costs. The main chanel for the braodcast will be web broswers, which ensures that even students without smartphones are not at a disadvantage</p>
+					      <div class="container">
+					        <div class="carousel-caption">
+          
+				        </div>
+				      </div>
+				    </div>
+
+				    <div class="item">
+				      <h1>How It Works</h1>
+					<p>Our devices are loaded up with the relevant software and our proprietory algrthms, sort and organise the data in a format which is intuitive and easy to understand. The device then sets up a Wireless access point through which the student can access any website or data which is hosted on the device</p>
+				      <div class="container">
+				        <div class="carousel-caption">
+				          
+				        </div>
+				      </div>
+				    </div>
+				  </div>
+
+
+					</div>
+					
+				</div>
+			</div>
+
+		</div>
+	</div>
+
+	<div id="team">
+		<div class="main main-raised">
+			<div class="section section-basic" id="members">
+		    	<div class="container">
+		          
+		          
+
+		          	
+
+	          	<div class="row">
+
+	          		<h2><span>MEET THE TEAM</span></h2>
+	          		<hr>
+
+      				<div class="col-md-4">
+      					<img src="images/1lindo.jpeg" class="img-circle img-responsive">
+      					<h3>Lindokuhle Shongwe</h3>
+      					<h5>BSc Electrical Engineering</h5>
+				        <h5>University of Cape Town</h5>
+     				</div>
+
+      				<div class="col-md-4">
+      					<img src="images/raphael.jpg" class="img-circle img-responsive">
+      					<h3>Raphael Norwitz</h3>
+      					<h5>Msc Communications Network Engineering</h5>
+				        <h5>University of</h5>
+				</div>
+				
+				<div class="col-md-4">
+					<img src="images/1orinea.jpeg" class="img-circle img-responsive">
+					<h3>Orinea Tshivhenga</h3>
+					<h5>BBusSci Analytics</h5>
+				        <h5>University of Cape Town</h5>
+      				</div>
+					
+			</div>  
+		                
+			    
+		   </div>
+
+
+		  
+			<div class="section section-pagination" id="how">
+		        <div class="container" class="howTo">
+		            <div class="row">
+                        
+                         <video width="320" height="240" controls>
+                            <source src="movie.mp4" type="video/mp4">
+                            <source src="movie.ogg" type="video/ogg">
+                            </video>
+		                
+		                    <!---<div class="title">
+		                        <h3>Progress Bars</h3>
+		                    </div>--->
+		                
+		             </div>
+		         </div>
+		    </div>
+
+		</div>
+		 
+		<h3 align="center">Learn Something New</h3>
+        	<!-- <img src="static/images/pluged_logo.jpg"> -->
+        	<div align="center">
+                	<div align="center">
+                        	<form class="button button1" action="/kanav">
+                                <input type="submit" value="Navigate to Kahn Academy Lite!"/>
+                        	</form>
+                	</div>
+
+                <div align="center">
+                        <form class="button button1" action="/static/WebBrowser.apk">
+                                <input type="submit" value="Download Web Browser"/>
+                        </form>
+                </div>
+
+        </div>
+
+
+	<div class="section section-notifications" id="notifications">
+	        <div class="alert alert-info">
+	            <div class="container-fluid">
+					<div class="alert-icon">
+						<i class="material-icons">info_outline</i>
+					</div>
+					<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+						<span aria-hidden="true"><i class="material-icons">clear</i></span>
+					</button>
+
+			
+	            	<b>Redirect to KAlite</b> A wealth of knowledge awaits you on th eoffline version of Khan Academy, developed by LearningEquality 
+	            </div>
+	        </div>
+
+	<footer class="footer">
+	    <div class="container">
+
+	        <nav class="pull-left">
+	            <img src="images/logo2.png" width="75px">
+	        </nav>
+	        <div class="copyright pull-right">
+	            &copy; 2017,Adapted from a template by Nhluvuko.
+	        </div>
+	    </div>
+	</footer>
+</div>
+
+
+<!--   Core JS Files   -->
+	<script src="assets/js/jquery.min.js" type="text/javascript"></script>
+	<script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
+	<script src="assets/js/material.min.js"></script>
 	
 
+	<!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
+	<script src="assets/js/nouislider.min.js" type="text/javascript"></script>
+
+	<!--  Plugin for the Datepicker, full documentation here: http://www.eyecon.ro/bootstrap-datepicker/ -->
+	<script src="assets/js/bootstrap-datepicker.js" type="text/javascript"></script>
+
+	<!-- Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc -->
+	<script src="assets/js/material-kit.js" type="text/javascript"></script>
+
+	<script type="text/javascript">
+
+		$().ready(function(){
+			// the body of this function is in assets/material-kit.js
+			materialKit.initSliders();
+            window_width = $(window).width();
+
+            if (window_width >= 992){
+                big_image = $('.wrapper > .header');
+
+				$(window).on('scroll', materialKitDemo.checkScrollForParallax);
+			}
+
+		});
+	</script>
+
+
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+
+  <script>
+  $(function() {
+    $('a[href*="#"]:not([href="#"])').click(function() {
+      if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
+        var target = $(this.hash);
+        target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
+        if (target.length) {
+          $('html, body').animate({
+            scrollTop: target.offset().top
+          }, 1000);
+          return false;
+        }
+      }
+    });
+  });
+  </script>
+
+
+
+</html>
