Updated Web Page

--- a/pluged_app/templates/pluged_page.html
+++ b/pluged_app/templates/pluged_page.html
@@ -1,5 +1,23 @@
 
 <!doctype html>
+button {
+	    background-color: #4CAF50; /* Green */
+	    border: none;
+	    color: blue;
+	    padding: 20px 45px;
+	    text-align: center;
+	    text-decoration: none;
+	    display: inline-block;
+	    font-size: 16px;
+	    margin: 4px 2px;
+	    cursor: pointer;
+}
+.button1 {border-radius: 2px;}
+
+
+
+
+
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
@@ -229,7 +247,7 @@
 	            <img src="images/logo2.png" width="75px">
 	        </nav>
 	        <div class="copyright pull-right">
-	            &copy; 2017,Adapted from a template by Nhluvuko.
+	            &copy; 2017,PlugEd
 	        </div>
 	    </div>
 	</footer>
