--- a/pluged_app/templates/pluged_page.html
+++ b/pluged_app/templates/pluged_page.html
@@ -1,4 +1,4 @@
-
+<!--
 <!doctype html>
 button {
 	    background-color: #4CAF50; /* Green */
@@ -13,7 +13,7 @@ button {
 	    cursor: pointer;
 }
 .button1 {border-radius: 2px;}
-
+-->
 
 
 
@@ -107,7 +107,7 @@ button {
 					  <div class="carousel-inner">
 					    <div class="item active">
 					      <h1>The Problem</h1>
-		<p color=>Resource shortages and inadequate access to online educatonal contentis one of the biggest barriers to education.</p>
+		<p color=>Resource shortages and inadequate access to online educational contentis one of the biggest barriers to education.</p>
 					      <div class="container">
 					        
 					      </div>
@@ -118,7 +118,7 @@ button {
 					    <div class="item">
 					      <h1>PlugEd's</h1>
 					      <h4><strong>Solution</strong></h4>
-					      <p>Our idea is to provide an offline device which broadcasts high bandwidth content such as videos to students without the associated data costs. The main chanel for the braodcast will be web broswers, which ensures that even students without smartphones are not at a disadvantage</p>
+					      <p>Our offline device which broadcasts high bandwidth content such as videos to students without the associated data costs. The main chanel for the braodcast will be web broswers, which ensures that even students without smartphones are not at a disadvantage</p>
 					      <div class="container">
 					        <div class="carousel-caption">
           
@@ -179,20 +179,16 @@ button {
 					<h3>Orinea Tshivhenga</h3>
 					<h5>BBusSci Analytics</h5>
 				        <h5>University of Cape Town</h5>
-      				</div>
-					
-			</div>  
-		                
-			    
+      				</div>		
+			</div>    
 		   </div>
 
-
-		  
+		  	<h2 align="center">Learn Something New</h2>
 			<div class="section section-pagination" id="how">
 		        <div class="container" class="howTo">
 		            <div class="row">
                         
-                         <video width="320" height="240" controls>
+                         <video width="400" height="300" controls>
                             <source src="movie.mp4" type="video/mp4">
                             <source src="movie.ogg" type="video/ogg">
                             </video>
@@ -207,7 +203,7 @@ button {
 
 		</div>
 		 
-		<h3 align="center">Learn Something New</h3>
+		<h3 align="center">Visit Khan Academy Lite </h3>
         	<!-- <img src="static/images/pluged_logo.jpg"> -->
         	<div align="center">
                 	<div align="center">
@@ -224,7 +220,7 @@ button {
 
         </div>
 
-
+<!--
 	<div class="section section-notifications" id="notifications">
 	        <div class="alert alert-info">
 	            <div class="container-fluid">
@@ -239,7 +235,7 @@ button {
 	            	<b>Redirect to KAlite</b> A wealth of knowledge awaits you on th eoffline version of Khan Academy, developed by LearningEquality 
 	            </div>
 	        </div>
-
+-->
 	<footer class="footer">
 	    <div class="container">
 
