--- a/pluged_app/templates/pluged_page.html
+++ b/pluged_app/templates/pluged_page.html
@@ -21,8 +21,7 @@ button {
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
-	<link rel="icon" type="image/png" href="images/logo.png">
+	<link rel="icon" type="static/images/image/png" href="static/images/logo.png">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
 	<title>Plug Education</title>
@@ -34,13 +33,13 @@ button {
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
 
 	<!-- CSS Files -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="assets/css/material-kit.css" rel="stylesheet"/>
+    <link href="static/assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="static/assets/css/material-kit.css" rel="stylesheet"/>
 
 	<!-- CSS Just for demo purpose, don't include it in your project -->
-	<link href="assets/css/demo.css" rel="stylesheet" />
+	<link href="static/assets/css/demo.css" rel="stylesheet" />
 
-	<link href="assets/css/custom.css" rel="stylesheet" />
+	<link href="static/assets/css/custom.css" rel="stylesheet" />
 
 	<link href="https://fonts.googleapis.com/css?family=Alex+Brush" rel="stylesheet"
 </head>
@@ -59,7 +58,7 @@ button {
 	    	<a href="#">
 	        	<div class="logo-container">
 	                <div class="logo">
-	                    <img src="images/logo.png" alt="PlugEd" rel="tooltip" title="PlugEd" data-placement="bottom">
+	                    <img src="static/images/logo.png" alt="PlugEd" rel="tooltip" title="PlugEd" data-placement="bottom">
 	                </div>
         
 				</div
@@ -90,7 +89,8 @@ button {
 
 <div class="wrapper">
 
-	<div class="header header-filter" style="background-image: url('assets/img/bg2.jpeg');">
+	<div class="header header-filter" style="background-image: url('static/images/bg2.jpeg');">
+	
 
 		<div class="container">
 			<div class="row">
@@ -116,8 +116,7 @@ button {
 
 
 					    <div class="item">
-					      <h1>PlugEd's</h1>
-					      <h4><strong>Solution</strong></h4>
+					      <h1>PlugEd's Solution</h1>
 					      <p>Our offline device which broadcasts high bandwidth content such as videos to students without the associated data costs. The main chanel for the braodcast will be web broswers, which ensures that even students without smartphones are not at a disadvantage</p>
 					      <div class="container">
 					        <div class="carousel-caption">
@@ -149,87 +148,91 @@ button {
 	<div id="team">
 		<div class="main main-raised">
 			<div class="section section-basic" id="members">
-		    	<div class="container">
-		          
-		          
+		    		<div class="container">
 
-		          	
 
-	          	<div class="row">
-
-	          		<h2><span>MEET THE TEAM</span></h2>
-	          		<hr>
-
-      				<div class="col-md-4">
-      					<img src="images/1lindo.jpeg" class="img-circle img-responsive">
-      					<h3>Lindokuhle Shongwe</h3>
-      					<h5>BSc Electrical Engineering</h5>
-				        <h5>University of Cape Town</h5>
-     				</div>
-
-      				<div class="col-md-4">
-      					<img src="images/raphael.jpg" class="img-circle img-responsive">
-      					<h3>Raphael Norwitz</h3>
-      					<h5>Msc Communications Network Engineering</h5>
-
-				        <h5>Columbia University</h5>
-
-				</div>
-				
-				<div class="col-md-4">
-					<img src="images/1orinea.jpeg" class="img-circle img-responsive">
-					<h3>Orinea Tshivhenga</h3>
-					<h5>BBusSci Analytics</h5>
-				        <h5>University of Cape Town</h5>
-      				</div>		
-
-			</div>  
+		          	<div class="row">
+	
+		          		<h2><span>MEET THE TEAM</span></h2>
+		          		<hr>
+	
+			      				<div class="col-md-4">
+			      					<img src="static/images/1lindo.jpeg" class="img-circle img-responsive">
+			      					<h3>Lindokuhle Shongwe</h3>
+			      					<h5>BSc Electrical Engineering</h5>
+							        <h5>University of Cape Town</h5>
+	     						</div>
+	
+	      						<div class="col-md-4">
+			      					<img src="static/images/raphael.jpg" class="img-circle img-responsive">
+			      					<h3>Raphael Norwitz</h3>
+			      					<h5>MSc Machine Learning</h5>
+						       	        <h5>Columbia University</h5>
+							</div>
+						
+							<div class="col-md-4">
+								<img src="static/images/1orinea.jpeg" class="img-circle img-responsive">
+								<h3>Orinea Tshivhenga</h3>
+								<h5>BBusSci Analytics</h5>
+							        <h5>University of Cape Town</h5>
+	      						</div>		
+				</div>  
   
-		   </div>
+		 	  </div>
+	</div>
 
-	          <div class="col">
+
+	          <div class="main-raised">
 				
-				<hr>
-	          		<h2><span>Learn Something New</span></h2>
-	        
-
+	          		
 				<div class="section section-pagination" id="how">
 		  		      <div class="container" class="howTo">
-		 		           <div class="row">
-                        
-                         		<video width="400" height="300" controls>
-                         		   <source src="movie.mp4" type="video/mp4">
-                        		    <source src="movie.ogg" type="video/ogg">
-                            		</video>
+		 		           <h2><span>Learn Something New</span></h2>
+						<div class="row">
+                         			<video width="300" height="300" controls>
+                         			   <source src="static/movie.mp4" type="video/mp4">
+                        			    <source src="static/movie.ogg" type="video/ogg">
+                            			</video>
 		                
 				
-				  	</div>  
+				  		</div>  
   
-		   		</div>
+		   		     </div>
 
-		  	
-				<h5 align="center">Visit Khan Academy Lite Using the link Below </h5>
-        			<!-- <img src="static/images/pluged_logo.jpg"> -->
-        				<div align="center">
-      			          	<div align="center">
-      	                  	<form class="button button1" action="/kanav">
-                                <input type="submit" value="Navigate to Kahn Academy Lite!"/>
-                        	</form>
-                	</div>		                
-		
-				 <div align="center">
-                        		<form class="button button1" action="/static/WebBrowser.apk">
-                              		  <input type="submit" value="Download Web Browser"/>
-                      		  	</form>
-                		</div>
+		  <div class="row">
+					<h5 align="center">Visit Khan Academy Lite Using the link Below </h5>
+	        				<!-- <img src="static/images/pluged_logo.jpg"> -->
+	        				<div align="center">
+	      			          	  <div align="center">
+	      	                  				<form class="button button1" action="/kanav">
+	                             			        <input type="submit" value="Navigate to Kahn Academy Lite!"/>
+	                        				</form>
+	                			</div>		                
+			
+						 <div align="center">
+	                        		<form class="button button1" action="static/WebBrowser.apk">
+	                              		  <input type="submit" value="Download Web Browser"/>
+	                      		  	</form>
+	                		</div>
+	
+	            			 </div>
+			         </div>
+			    </div>
+	
+		</div>
+		 
 
-             </div>
+
+               
+        </div>
+
+
 
 	<footer class="footer">
 	    <div class="container">
 
 	        <nav class="pull-left">
-	            <img src="images/logo2.png" width="75px">
+	            <img src="static/images/logo2.png" width="75px">
 	        </nav>
 	        <div class="copyright pull-right">
 	            &copy; 2017,PlugEd
@@ -240,21 +243,15 @@ button {
 
 
 <!--   Core JS Files   -->
-	<script src="assets/js/jquery.min.js" type="text/javascript"></script>
-	<script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
-	<script src="assets/js/material.min.js"></script>
-	
+	<script src="static/assets/js/jquery.min.js" type="text/javascript"></script>
+	<script src="static/assets/js/bootstrap.min.js" type="text/javascript"></script>
+	<script src="static/assets/js/material.min.js"></script>
 
 	<!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-	<script src="assets/js/nouislider.min.js" type="text/javascript"></script>
+	<script src="static/assets/js/nouislider.min.js" type="text/javascript"></script>
 
-	<!--  Plugin for the Datepicker, full documentation here: http://www.eyecon.ro/bootstrap-datepicker/ -->
-	<script src="assets/js/bootstrap-datepicker.js" type="text/javascript"></script>
 
-	<!-- Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc -->
-	<script src="assets/js/material-kit.js" type="text/javascript"></script>
-
-	<script type="text/javascript">
+	<script type="static/text/javascript">
 
 		$().ready(function(){
 			// the body of this function is in assets/material-kit.js
