--- a/pluged_app/templates/AboutUs.html
+++ b/pluged_app/templates/AboutUs.html
@@ -1,5 +1,5 @@
 <html>
-
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
 <title>About</title>
 
@@ -8,42 +8,41 @@
 
 <body>
 	<!--Insert the PlugEd Logo & Home button-->	
-	<form action="/homepage">	
+	<form action="/">	
 	<center><button class="home"></button></center>
-	
 	</form>
 	
 	<button class="accordion">Why we do it</button>
 	<div class="panel">
-	  <p>We believe that education is the most effective way to 			change the world and that it should be freely 		available to all</p>
+	  <p>We believe that access to information should be free</p>
 	</div>
 
 	<button class="accordion">How we do it</button>
 	<div class="panel">
-	  <p>We leverage existing content by dowloading it onto our devices.</p>
+	  <p>We bring educational content to you data-free through a devicee</p>
 	</div>
 
 	<button class="accordion">What we do</button>
 	<div class="panel">
-	  <p>We make content available offline through a WiFi hotspot through which people can access educational materials</p>
+	  <p>We make content available offline for people without data to access</p>
 	</div> 
 
 <button class="accordion">Meet the team!</button>
 	<div class="panel">
 	<h3></h3>
-<center><img src="../static/images/1lindo.jpeg" position=absolute align="center" alt="Photo of Lindo"  style="width:200px;height:200px;"></center>
+<center><img src="../static/images/1lindo.jpeg" position=absolute align="center" alt="Photo of Lindo"  style="width:100px;height:100px;"></center>
 	  <h4>Lindokuhle Shongwe</h4>
 	  <h5>BSc in Electrical Engineering</h5>
 	
+	  
+<center><img src= "../static/images/raphael.jpg" position=absolute align="center" alt="Photo of Raphael" style="width:100px;height:100px"></center>
+	<h4>Raphael Norwitz</h4>
+	<h5>MSc Machine Learning</h5>
 
-<center><img src="../static/images/1orinea.jpeg" position=absolute align="center" alt="Photo of Orinea"  style="width:200px;height:200px;"></center>
+<center><img src="../static/images/1orinea.jpeg" position=absolute align="center" alt="Photo of Orinea"  style="width:100px;height:100px;"></center>
 	  <h4>Orinea Tshivhenga</h4>
 	  <h5>BBusSc Analytics</h5>
-	 
-
-<center><img src="../static/images/raphael.jpg" position=absolute align="center" alt="Photo of Raphael"  style="width:200px;height:200px;"></center>
-	  <h4>Raphael Norwitz</h4>
-	  <h5>MSc Machine Learning</h5>
+	
 	</div> 
 
 
